added second section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="top__content">
         <h1 class="top__title">Добро пожаловать на мой сайт!</h1>
         <h2 class="top__subtitle">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <span class="top__subtitle_bold">поехали</span> и <span class="top__subtitle_bold">приступай</span></h2>
-        <button class="top__button">Поехали!</button>
+        <button class="button">Поехали!</button>
         </div>
     </section>
     <section class="main center">
@@ -36,6 +36,18 @@
                 <div>
                     <a href="#" class="main__text">Игра 3</a>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="first center">
+        <div class="first__content">
+            <div class="first__content_text">
+                <h1 class="first__title">Времена года!</h1>
+                <h2 class="first__subtitle">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</h2>
+                <button class="button">Играть!</button>
+            </div>
+            <div class="first__content_image">
+
             </div>
         </div>
     </section>
