added bottom image

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <button class="button">Играть!</button>
             </div>
             <div class="first__content_image">
-
+                <img src="./photo/first.png" alt="illustration">
             </div>
         </div>
     </section>
