added second section and js 2.3

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <section class="main center">
         <div class="main__content">
             <div class="main__conteiner">
-            <img class="main__photo" src="photo/1.jpg" alt="first photo">
+            <img class="main__game" src="photo/1.jpg" alt="first photo">
                 <div>
                     <a href="#" class="main__text">Игра 1</a>
                 </div>
             </div>
             <div class="main__conteiner">
-            <img class="main__photo" src="photo/2.jpg" alt="second photo">
+            <img class="main__game" src="photo/2.jpg" alt="second photo">
                 <div>
                     <a href="#" class="main__text">Игра 2</a>
                 </div>
             </div>
             <div class="main__conteiner">
-            <img class="main__photo" src="photo/3.jpg" alt="third photo">
+            <img class="main__game" src="photo/3.jpg" alt="third photo">
                 <div>
                     <a href="#" class="main__text">Игра 3</a>
                 </div>
@@ -46,8 +46,8 @@
                 <h2 class="first__subtitle">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</h2>
                 <button class="button">Играть!</button>
             </div>
-            <div class="first__content_image">
-                <img src="./photo/first.png" alt="illustration">
+            <div>
+                <img class="first__content_image" src="./photo/first.png" alt="illustration">
             </div>
         </div>
     </section>
