--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
             </div>
         </div>
     </section>
-    <section class="first center">
-        <div class="first__content">
-            <div class="first__content_text">
-                <h1 class="first__title">Времена года!</h1>
-                <h2 class="first__subtitle">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</h2>
+    <section class="first-game center">
+        <div class="content">
+            <div class="content_text">
+                <h1 class="title">Времена года!</h1>
+                <h2 class="subtitle">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</h2>
                 <button class="button">Играть!</button>
             </div>
             <div>
-                <img class="first__content_image" src="./photo/first.png" alt="illustration">
+                <img class="image" src="./photo/first.png" alt="illustration">
             </div>
         </div>
     </section>
