--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
             </div>
         </div>
     </section>
+    <section class="second-game center">
+        <div class="content">
+            <div class="content_text">
+                <h1 class="title">Запомни слова</h1>
+                <h2 class="subtitle">При нажатии на кнопку играть, вы увидите несколько слов, которые вам необходимо запомнить.</h2>
+                <button onclick="month()" class="button">Играть!</button>
+            </div>
+            <div>
+                <img class="image image_second-game" src="./photo/second.png" alt="illustration">
+            </div>
+        </div>
+    </section>
     <footer>
     </footer>
 
