--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h1 class="title">Времена года!</h1>
                 <h2 class="subtitle">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому
                     времени года он относится</h2>
-                <button class="button">Играть!</button>
+                <button onclick="season()" class="button">Играть!</button>
             </div>
             <div>
                 <img class="image" src="./photo/first.png" alt="illustration">
@@ -59,8 +59,9 @@
         <div class="content">
             <div class="content_text">
                 <h1 class="title">Запомни слова</h1>
-                <h2 class="subtitle">При нажатии на кнопку играть, вы увидите несколько слов, которые вам необходимо запомнить.</h2>
-                <button onclick="month()" class="button">Играть!</button>
+                <h2 class="subtitle">При нажатии на кнопку играть, вы увидите несколько слов, которые вам необходимо
+                    запомнить.</h2>
+                <button class="button">Играть!</button>
             </div>
             <div>
                 <img class="image image_second-game" src="./photo/second.png" alt="illustration">
@@ -71,7 +72,7 @@
         <p>2024</p>
     </footer>
 
-    <script src="./hw-4.js"></script>
+    <script src="./hw-5.js"></script>
 </body>
 
 </html>
