--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             </div>
         </div>
     </section>
-    <section class="first-game center">
+    <section class="game game__first-game center">
         <div class="content">
-            <div class="content_text">
+            <div class="content__text">
                 <h1 class="title">Времена года!</h1>
                 <h2 class="subtitle">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому
                     времени года он относится</h2>
@@ -55,9 +55,9 @@
             </div>
         </div>
     </section>
-    <section class="second-game center">
+    <section class="game game__second-game center">
         <div class="content">
-            <div class="content_text">
+            <div class="content__text">
                 <h1 class="title">Запомни слова</h1>
                 <h2 class="subtitle">При нажатии на кнопку играть, вы увидите несколько слов, которые вам необходимо
                     запомнить.</h2>
@@ -68,11 +68,18 @@
             </div>
         </div>
     </section>
-    <footer>
-        <p>2024</p>
+    <section class="third-game center">
+        <div class="third-game__content">
+            <h1 class="third-game__title">Игра в загадки</h1>
+            <h2 class="third-game__subtitle">Компьютер загадывает загадку, вам необходимо ее угадать, если вы дадите не
+                правильный ответ, то компьютер даст вам подсказку. У вас будет три попытки и две подсказки.</h2>
+            <button class="button">Играть</button>
+        </div>
+    </section>
+    <footer class="footer">
+        <p>Все права защищены</p>
     </footer>
-
-    <script src="./hw-5.js"></script>
+    <script src="./hw-6.js"></script>
 </body>
 
 </html>
