edits to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
         </div>
     </section>
     <section class="game game__first-game center">
-        <div class="content">
-            <div class="content__text">
+        <div class="content content__first-game">
+            <div class="content__text content__text_first-game">
                 <h1 class="title">Времена года!</h1>
-                <h2 class="subtitle">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому
-                    времени года он относится</h2>
+                <h2 class="subtitle">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</h2>
                 <button onclick="season()" class="button">Играть!</button>
             </div>
             <div>
@@ -56,15 +55,15 @@
         </div>
     </section>
     <section class="game game__second-game center">
-        <div class="content">
-            <div class="content__text">
+        <div class="content content__second-game">
+            <div>
+                <img class="image image_second-game" src="./photo/second.png" alt="illustration">
+            </div>
+            <div class="content__text content__text_second-game">
                 <h1 class="title">Запомни слова</h1>
                 <h2 class="subtitle">При нажатии на кнопку играть, вы увидите несколько слов, которые вам необходимо
                     запомнить.</h2>
-                <button class="button">Играть!</button>
-            </div>
-            <div>
-                <img class="image image_second-game" src="./photo/second.png" alt="illustration">
+                <button onclick="playWordGame()" class="button">Играть!</button>
             </div>
         </div>
     </section>
@@ -79,7 +78,7 @@
     <footer class="footer">
         <p>Все права защищены</p>
     </footer>
-    <script src="./hw-6.js"></script>
+    <script src="./hw-7.js"></script>
 </body>
 
 </html>
